Added delete route
